--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,6 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: false
+  fqdn: lifeistooshort.to
   on:
     branch: master
